# Hilda

./: .breakpoints  .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt  tutorial.txt
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_post_slug.py  0003_auto_20211009_1213.py  0004_post_tags.py
blog/static/css/: blog.css
blog/templates/blog/: base.html  latest_posts.html  main_page.html  pagination.html  post_detail.html  post_edit.html  post_list.html
blog/templatetags/: blog_tags.py
mysite/: settings.py  urls.py
