[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.0"
python = "^3.8"
pytils = "^0.3"
django-taggit = "^1.5.1"
django-bootstrap-icons = "^0.7.5"
django-crispy-forms = "^1.13.0"
[tool.poetry.dev-dependencies]
